--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,30 +4,66 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/android
 
 trigger:
-- main
-
+  branches:
+    include:
+      - master
+variables:
+  - group: Mobile # change it to the name you have set
 pool:
-  vmImage: 'macos-latest'
-
+  vmImage: 'ubuntu-latest'
 steps:
-
-
-- task: Gradle@3
-  inputs:
-    gradleWrapperFile: 'gradlew'
-    workingDirectory: '../tkey'
-    tasks: 'build'
-    publishJUnitResults: false
-    javaHomeOption: 'JDKVersion'
-    sonarQubeRunAnalysis: false
-    spotBugsAnalysis: false
-
-- task: AndroidSigning@3
-  inputs:
-    apkFiles: '**/*.apk'
-    apksignerKeystoreFile: 'tkey'
-    apksignerKeystorePassword: '123456'
-    apksignerKeystoreAlias: 'key0'
-    apksignerKeyPassword: '123456'
-    apksignerFile: '../tkey'
-    zipalign: false
+  - checkout: self
+    persistCredentials: true
+    clean: true
+  - task: NodeTool@0
+    displayName: 'Install Node'
+    inputs:
+      versionSpec: '16.10.0' # you can use your desired version here
+  - script: yarn install
+    displayName: Install Dependencies
+  - script: |
+      # Disable autocommit on version bump 
+      yarn config set version-sign-git-tag false
+      yarn config set version-git-tag false
+      yarn config set version-commit-hooks false
+      # Checkout branch where the build is triggered
+      git checkout $(Build.SourceBranchName)
+      # Extract existing version of package.json
+      oldVer=$(jq -r ".version" package.json)
+      # Bump version
+      yarn version --patch
+      # Add bumped version to staging
+      git add *
+      # Extract new version of package.json
+      newVer=$(jq -r ".version" package.json)
+      # Set environment variables
+      echo "##vso[task.setvariable variable=OLD_VERSION]$oldVer"
+      echo "##vso[task.setvariable variable=NEW_VERSION]$newVer"
+    displayName: 'Bump version and set variables'
+  - task: Gradle@2
+    displayName: 'Build APK'
+    inputs:
+      gradleWrapperFile: 'android/gradlew'
+      workingDirectory: 'android/'
+      options: '-PversionName=$(NEW_VERSION) -PversionCode=$(Build.BuildId)'
+      tasks: 'assembleRelease'
+      publishJUnitResults: false
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.11'
+      gradleOptions: '-Xmx3072m'
+      sonarQubeRunAnalysis: false
+  - task: AndroidSigning@3
+    displayName: 'Sign APK'
+    inputs:
+      apkFiles: 'android/app/build/outputs/apk/release/*.apk'
+      apksignerKeystoreFile: 'keystore.keystore'
+      apksignerKeystorePassword: '$(AndroidKeyStorePassword)'
+      apksignerKeystoreAlias: '$(AndroidKeyAlias)'
+      apksignerKeyPassword: '$(AndroidKeyAliasPassword)'
+      zipalign: true
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish APK to artifacts'
+    inputs:
+      PathtoPublish: 'android/app/build/outputs/apk/release'
+      ArtifactName: 'android'
+      publishLocation: 'Container'
