--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,6 @@ parameters:
     displayName: Enter the current version for this release
     type: string
     default: "1.0.1"
+
+    trigger:
+      - main
