--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,10 @@ parameters:
     type: string
     default: "1.0.1"
 
-    trigger:
-      - main
+trigger:
+  - main
+
+variables:
+  - name: 'apkFilePath'
+    value: '**/*${{ parameters.BuildType }}*.apk'
+  - group: AppCenterConfig
