--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,15 +4,17 @@ trigger:
 pool:
   vmImage: 'macOS-latest'
 
-steps:
-  - task: JavaToolInstaller@0
-    inputs:
-        versionSpec: '11'
-        jdkArchitectureOption: 'x64'
-        jdkSourceOption: 'LocalDirectory'
-        jdkFile: '/builds/openjdk-11.0.2_osx-x64_bin.tar.gz'
-        jdkDestinationDirectory: '$(Agent.BuildDirectory)/Java'
-        cleanDestinationDirectory: true
-
-
-
+jobs:
+  - job: Build
+    displayName: 'Build job'
+    steps:
+      - script: |
+          echo "JDK File Path: $(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz"
+      - task: JavaToolInstaller@0
+        inputs:
+          versionSpec: '11'
+          jdkArchitectureOption: 'x64'
+          jdkSourceOption: 'LocalDirectory'
+          jdkFile: '$(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz'
+          jdkDestinationDirectory: '/Library/Java/JavaVirtualMachines'
+          cleanDestinationDirectory: true
