--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,19 @@ jobs:
           versionSpec: '8'
           jdkArchitectureOption: 'x64'
           jdkSourceOption: 'PreInstalled'
+
+      - task: Gradle@2
+        displayName: 'Building Project'
+        continueOnError: false
+        inputs:
+            workingDirectory: ''
+            gradleWrapperFile: 'gradlew'
+            gradleOptions: '-Xmx3072m'
+            publishJUnitResults: false
+            tasks: assemble${{ parameters.BuildType }}
+            codeCoverageToolOption: 'None'
+            javaHomeOption: 'JDKVersion'
+            jdkVersionOption: 'default'
+            jdkArchitectureOption: 'x64'
+            checkStyleRunAnalysis: false
+            findBugsRunAnalysis: false
