--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,27 +17,12 @@ jobs:
           jdkArchitectureOption: 'x64'
           jdkSourceOption: 'PreInstalled'
 
-      - task: Maven@3
-        inputs:
-          mavenPomFile: 'pom.xml'
-          publishJUnitResults: false
-          javaHomeOption: 'JDKVersion'
-          jdkVersionOption: '1.11'
-          mavenVersionOption: 'Default'
-          mavenOptions: '-Xmx3072m'
-
       - task: Gradle@2
-        displayName: 'Building Project'
-        continueOnError: false
         inputs:
-            workingDirectory: ''
-            gradleWrapperFile: 'gradlew'
-            gradleOptions: '-Xmx3072m'
-            publishJUnitResults: false
-            tasks: 'assembleDebug'
-            codeCoverageToolOption: 'None'
-            javaHomeOption: 'JDKVersion'
-            jdkVersionOption: 'default'
-            jdkArchitectureOption: 'x64'
-            checkStyleRunAnalysis: false
-            findBugsRunAnalysis: false
+          workingDirectory: ''
+          gradleWrapperFile: 'gradlew'
+          gradleOptions: '-Xmx3072m'
+          publishJUnitResults: false
+          testResultsFiles: '**/TEST-*.xml'
+          tasks: 'assembleDebug'
+
