--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,11 @@ jobs:
         displayName: 'Building Project'
         continueOnError: false
         inputs:
-            workingDirectory: ''
+            workingDirectory: 'android/gradlew'
             gradleWrapperFile: 'gradlew'
             gradleOptions: '-Xmx3072m'
             publishJUnitResults: false
-            tasks: 'assembleDebug'
+            tasks: 'build'
             codeCoverageToolOption: 'None'
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: 'default'
