--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+  - script: |
+      echo "JDK File Path: $(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz"
   - task: JavaToolInstaller@0
     inputs:
-      versionSpec: '11'
-      architecture: 'x64'
+      versionSpec: '8'
+      jdkArchitectureOption: 'x64'
+      jdkSourceOption: 'PreInstalled'
 
   - script: |
       wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -O android-sdk-tools.zip
