--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,9 @@ pool:
 
 steps:
   - script: |
+      ls
+    displayName: 'List Files in Present Working Directory'
+  - script: |
       echo "JDK File Path: $(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz"
   - task: JavaToolInstaller@0
     inputs:
