--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,8 @@
 trigger:
-  branches:
-    include:
-      - main
+  - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'macOS-latest'
 
 steps:
   - script: |
