--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 
   - task: Gradle@2
     inputs:
-      workingDirectory: '$(System.DefaultWorkingDirectory)/android'
-      gradleWrapperFile: 'gradlew'
+      workingDirectory: '/Users/runner/work/_temp/'
+      gradleWrapperFile: '/Users/runner/work/_temp/gradlew'
       tasks: 'clean build connectedAndroidTest'
       options: '-Xmx3072m'
