--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,11 @@ steps:
       echo 'Files List'
       ls $(System.DefaultWorkingDirectory)
     displayName: 'List Files in Present Working Directory'
+
   - script: |
       echo "JDK File Path: $(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz"
+    displayName: 'Echo JDK File Path'
+
   - task: JavaToolInstaller@0
     inputs:
       versionSpec: '8'
@@ -27,7 +30,7 @@ steps:
 
   - task: Gradle@2
     inputs:
-      workingDirectory: '$(System.DefaultWorkingDirectory)'
-      gradleWrapperFile: '$(System.DefaultWorkingDirectory)/gradlew'
+      workingDirectory: '$(System.DefaultWorkingDirectory)'  # Adjust the working directory if needed
+      gradleWrapperFile: '**/gradlew'  # Adjust the path to the gradlew script
       tasks: 'assembleDebug'
       options: '-Xmx3072m'
