--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.2.2' // Use a compatible version
+    }
+}
+
 plugins {
 id 'com.android.application' version '8.2.2' apply false
 }
+
+
+
