--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,6 @@ steps:
       ls $(System.DefaultWorkingDirectory)
     displayName: 'List Files in Present Working Directory'
 
-  - script: |
-      echo "JDK File Path: $(Agent.BuildDirectory)/openjdk-11.0.2_osx-x64_bin.tar.gz"
-    displayName: 'Echo JDK File Path'
-
   - task: JavaToolInstaller@0
     inputs:
       versionSpec: '8'
@@ -28,20 +24,9 @@ steps:
       export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
     displayName: 'Install Android SDK'
 
-  - script: |
-      echo 'Checking Gradle Wrapper'
-      ls -l gradlew
-      chmod +x gradlew  # Ensure the Gradle Wrapper script is executable
-    displayName: 'Check and Set Gradlew Permissions'
-
-  - script: |
-      echo 'Run Gradle Build Locally'
-      ./gradlew assembleDebug  # Try running the Gradle build command locally
-    displayName: 'Run Gradle Build Locally'
-
   - task: Gradle@2
     inputs:
-      workingDirectory: '$(System.DefaultWorkingDirectory)'  # Adjust the working directory
+      workingDirectory: ''
       gradleWrapperFile: 'gradlew'
       tasks: 'assembleDebug'
       options: '-Xmx3072m'
