--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,18 +16,26 @@ jobs:
           jdkArchitectureOption: 'x64'
           jdkSourceOption: 'PreInstalled'
 
+      - script: echo '##vso[task.setvariable variable=JAVA_HOME]$(Agent.WorkFolder)/_temp/Java17'
+        displayName: 'Set Java version to 17'
+
+      - task: UseJavaVersion@0
+        inputs:
+          versionSpec: '17'
+          addToPath: true
+
       - task: Gradle@2
         displayName: 'Building Project'
         continueOnError: false
         inputs:
-            workingDirectory: ''
-            gradleWrapperFile: 'gradlew'
-            gradleOptions: '-Xmx3072m'
-            publishJUnitResults: false
-            tasks: assembleDebug
-            codeCoverageToolOption: 'None'
-            javaHomeOption: 'JDKVersion'
-            jdkVersionOption: 'default'
-            jdkArchitectureOption: 'x64'
-            checkStyleRunAnalysis: false
-            findBugsRunAnalysis: false
+          workingDirectory: ''
+          gradleWrapperFile: 'gradlew'
+          gradleOptions: '-Xmx3072m'
+          publishJUnitResults: false
+          tasks: assembleDebug
+          codeCoverageToolOption: 'None'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: 'default'
+          jdkArchitectureOption: 'x64'
+          checkStyleRunAnalysis: false
+          findBugsRunAnalysis: false
