--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,37 +4,29 @@ trigger:
 pool:
   vmImage: 'macOS-latest'
 
-steps:
-  - task: UseJavaVersion@0
-    inputs:
-      version: '17'
-      arch: 'x64'
-      jdkFile: '/Library/Java/JavaVirtualMachines/openjdk-17.0.1_osx-x64_bin.tar.gz'
-      jdkDestinationDirectory: '/Library/Java/JavaVirtualMachines'
-      cleanDestinationDirectory: true
+jobs:
+  - job: Build
+    displayName: 'Build job'
+    steps:
 
-  - script: |
-      echo 'Files List'
-      ls $(System.DefaultWorkingDirectory)
+      - task: JavaToolInstaller@0
+        inputs:
+          versionSpec: '17'
+          jdkArchitectureOption: 'x64'
+          jdkSourceOption: 'PreInstalled'
 
-  - task: JavaToolInstaller@0
-    inputs:
-      versionSpec: '17'
-      jdkArchitectureOption: 'x64'
-      jdkSourceOption: 'PreInstalled'
-
-  - task: Gradle@2
-    displayName: 'Building Project'
-    continueOnError: false
-    inputs:
-      workingDirectory: ''
-      gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
-      publishJUnitResults: false
-      tasks: assembleDebug
-      codeCoverageToolOption: 'None'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: 'default'
-      jdkArchitectureOption: 'x64'
-      checkStyleRunAnalysis: false
-      findBugsRunAnalysis: false
+      - task: Gradle@2
+        displayName: 'Building Project'
+        continueOnError: false
+        inputs:
+            workingDirectory: ''
+            gradleWrapperFile: 'gradlew'
+            gradleOptions: '-Xmx3072m'
+            publishJUnitResults: false
+            tasks: assembleDebug
+            codeCoverageToolOption: 'None'
+            javaHomeOption: 'JDKVersion'
+            jdkVersionOption: 'default'
+            jdkArchitectureOption: 'x64'
+            checkStyleRunAnalysis: false
+            findBugsRunAnalysis: false
