--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,5 @@ jobs:
           findBugsRunAnalysis: false
 
       - script: |
-          echo "Build location: $(Build.SourcesDirectory)"
-        displayName: 'Show Build Location'
+          echo "APK file location: $(Build.SourcesDirectory)/app/build/outputs/apk/debug/app-debug.apk"
+        displayName: 'Show APK File Location'
