--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,14 @@ jobs:
       - script: |
           echo "APK file location: $(Build.SourcesDirectory)/app/build/outputs/apk/debug/app-debug.apk"
         displayName: 'Show APK File Location'
+
+      - script: |
+          firebase login:ci --no-localhost --token "1//0gb8tXttQVMPnCgYIARAAGBASNwF-L9Ir77z3rFy7t1oS1IW9Pd77KqmNMRcZlHuKjqonxlTvuiLciHdIf2q0h5tdTsEbYPgt2QM"
+          env:
+          FIREBASE_TOKEN: "1//0gb8tXttQVMPnCgYIARAAGBASNwF-L9Ir77z3rFy7t1oS1IW9Pd77KqmNMRcZlHuKjqonxlTvuiLciHdIf2q0h5tdTsEbYPgt2QM"
+          displayName: 'Authenticate Firebase'
+    
+          - script: |
+          firebase appdistribution:distribute path/to/your/apk/file.apk --app your-firebase-app-id --groups your-distribution-group
+          displayName: 'Upload APK to Firebase App Distribution'
+
