--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,11 +31,20 @@ jobs:
           checkStyleRunAnalysis: false
           findBugsRunAnalysis: false
 
-      - script: |
-          npm install -g firebase-tools
-        displayName: 'Install Firebase CLI'
+      - task: SonarCloudAnalyze@1
+        inputs:
+          jdkversion: 'JAVA_HOME_17_X64'
 
-      - script: |
-          firebase login:ci --no-localhost --token "0gb8tXttQVMPnCgYIARAAGBASNwF-L9Ir77z3rFy7t1oS1IW9Pd77KqmNMRcZlHuKjqonxlTvuiLciHdIf2q0h5tdTsEbYPgt2QM"
-          firebase appdistribution:distribute $(Build.SourcesDirectory)/app/build/outputs/apk/debug/app-debug.apk --app 1:429865720909:android:4be9d3c45462ad91d95004 --groups test
-        displayName: 'Authenticate Firebase and Upload APK to Firebase App Distribution'
+      - task: SonarCloudPublish@1
+        inputs:
+          pollingTimeoutSec: '300'
+
+      - task: SonarCloudPrepare@1
+        inputs:
+          SonarCloud: 'sonarazure'
+          organization: 'sonatest'
+          scannerMode: 'MSBuild'
+          projectKey: 'uditkrroy0822_testsonar'
+          projectName: 'testsonar'
+
+      
